home page alignment fixes

--- a/src/components/Navframe/index.css
+++ b/src/components/Navframe/index.css
@@ -1,10 +1,10 @@
 
-@media only screen and (max-width: 999px) and (min-width: 500px){
+/* @media only screen and (max-width: 999px) and (min-width: 500px){
 
     .navbar {
         visibility: hidden;
     }
-}
+} */
 .navbar {
     font-size: 1.5em;
     padding-left: 10px;
